
  - Added a combined interactive command-input and commandline GUI panel.

  - The GUI client now writes a logfile so that unhandled exceptions can be
    better diagnosed.

  - Added a MultiSwitcher class to move multiple devices together to pre-
    defined positions.

  - Added the "nicos-collector" service that can be used to submit information
    from multiple caches to a "supercache".

**Release 2.2.0**

  - Updated documentation describing all NICOS services with configuration
    examples.

  - Setups now have more control over which commands are available to the user
    because the standard commands are not automatically loaded anymore.  The
    previous set of standard commands can be loaded via the module
    "nicos.commands.standard".

  - Added a "forecast" device that estimates the final number of counts when the
    preset is reached for a counting with a single detector.

  - The count loop can now be paused while counting (if the detector supports
    this) by the user or by conditions detected by the watchdog.

  - Added "warnlimits" to readable devices, a property that sets a range of
    values outside of which the device value is shown as "out of range" e.g. in
    the status monitor.

  - Added a tool to statically check setup files for errors while installing
    NICOS.

  - GUI: multiple connection presets are now supported.

  - Added pluggable authentication for the NICOS daemon and a backend that
    authenticates against proposal system users.

  - Now the user may only release a fixed device if the access level matches or
    exceeds the level of the user who fixed the device.

  - GUI: added interactive command input panel.

  - GUI: added "device overview/status" panel with a list of all existing
    devices and their values.

  - NICOS services and GUI client now run on Windows.

  - Added pseudo-devices to read/control the incoming/outgoing energy for
    triple-axis instruments.
